chore: JDK17 adaptation - replace List.getFirst()/getLast() with get(0)/get(size()-1)
Fixes JDK21-only List.getFirst() calls introduced by earlier cherry-picks
in this batch (Issue4501Test, PromQLEvaluatorIntegrationTest,
LSMTreeIndexCursorStaleKeyTest, RemoteSchemaIT). Not part of any upstream
commit; required to keep the java17 branch compiling on Java 17.